# zero-to-prod-rust

./: README.md
.github/workflows/: audit.yml  general.yml
zero2prod/: .dockerignore  .env  Cargo.toml  Dockerfile  zero_to_prod.postman_collection.json
zero2prod/configuration/: base.yaml
zero2prod/k8s-manifests/persistent-volumes/: postgres-pv.yaml  postgres-pvc.yaml
zero2prod/k8s-manifests/postgres-database/: deployment.yaml  service.yaml
zero2prod/k8s-manifests/rust-api-gateway/: deployment.yaml  service.yaml
zero2prod/scripts/: docker-compose.yml  init_db.sh
zero2prod/src/: configuration.rs  configuration.yaml  main.rs  telemetry.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
