[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Dante Kelly <dante@dantekelly.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.19"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
